refactor password_check to include Counter() which solves 4.2

--- a/notebooks/day4.ipynb
+++ b/notebooks/day4.ipynb
@@ -23,7 +23,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# No file in `../data` today since the inputs are simply 2 numbers\n",
+    "start = 168630\n",
+    "stop = 718098\n",
+    "\n",
+    "tests = {\n",
+    "    111111: True, \n",
+    "    223450: False, \n",
+    "    123789: False\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "def password_check(num, max_two_adj=False):       \n",
+    "    digits = [int(i) for i in str(num)]\n",
+    "    prev = digits[0]\n",
+    "\n",
+    "    for i in digits[1:]:\n",
+    "        if i < prev: # Always ascending\n",
+    "            return False\n",
+    "        prev = i\n",
+    "        \n",
+    "    counted = Counter(digits)\n",
+    "    \n",
+    "    if max_two_adj and (2 in counted.values()):\n",
+    "        return True\n",
+    "    if not max_two_adj and any(x > 1 for x in counted.values()):\n",
+    "        return True\n",
+    "    \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -35,40 +79,6 @@
     }
    ],
    "source": [
-    "# No file in `../data` today since the inputs are simply 2 numbers\n",
-    "start = 168630\n",
-    "stop = 718098\n",
-    "\n",
-    "tests = {111111: True, \n",
-    "         223450: False, \n",
-    "         123789: False\n",
-    "        }\n",
-    "       \n",
-    "\n",
-    "def password_check(num, max_two_adj=False):       \n",
-    "    digits = [int(i) for i in str(num)]\n",
-    "\n",
-    "    prev = digits[0]\n",
-    "    skip_prev = None\n",
-    "    repeat_toggle = False\n",
-    "\n",
-    "    for i in digits[1:]:\n",
-    "        if i < prev: # Always ascending\n",
-    "            return False\n",
-    "        if max_two_adj:\n",
-    "            if i == skip_prev:\n",
-    "                repeat_toggle = False\n",
-    "                continue \n",
-    "            if i == prev: #only gets here for exactly double repeat\n",
-    "                repeat_toggle = True\n",
-    "        elif i == prev:\n",
-    "            repeat_toggle = True\n",
-    "            \n",
-    "        skip_prev = prev    \n",
-    "        prev = i\n",
-    "    return True if repeat_toggle else False\n",
-    "        \n",
-    "\n",
     "def run_tests(tests=tests, max_two_adj=False):\n",
     "    \"\"\"tests is a dictionary {input_int: bool}\n",
     "    max_two_adj is passed through to the other functions, used in Part Two\"\"\"\n",
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +102,7 @@
        "1686"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +116,7 @@
     "            \n",
     "    return tally\n",
     "\n",
-    "password_counter(start, stop)"
+    "password_counter(start, stop)  # 1686"
    ]
   },
   {
@@ -126,46 +136,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "225555 failed, checker said False but it was True.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-78-575de2117e3c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m          }\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mrun_tests\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtests2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_two_adj\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-76-0860ea819add>\u001b[0m in \u001b[0;36mrun_tests\u001b[0;34m(tests, max_two_adj)\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpassword_check\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_two_adj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mpred\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{x} failed, checker said {pred} but it was {tests[x]}.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'All tests passed.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: 225555 failed, checker said False but it was True."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All tests passed.\n"
      ]
     }
    ],
    "source": [
-    "tests2 = {112233: True,\n",
-    "          123444: False,\n",
-    "          111122: True, \n",
-    "          188899: True,\n",
-    "          222255: True,\n",
-    "          225555: True\n",
-    "         }\n",
+    "tests2 = {\n",
+    "    112233: True,\n",
+    "    123444: False,\n",
+    "    111122: True, \n",
+    "    188899: True,\n",
+    "    222255: True,\n",
+    "    225555: True\n",
+    "}\n",
     "\n",
     "run_tests(tests2, max_two_adj=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "952"
+       "1145"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,40 +179,6 @@
    "source": [
     "password_counter(start, stop, max_two_adj=True)   # 952 is wrong: too low"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(168630, 718098)"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "start, stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
