max_to_adj renamed to exact_two_adj, cleanup return logic in password_check

--- a/notebooks/day4.ipynb
+++ b/notebooks/day4.ipynb
@@ -40,13 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import Counter\n",
     "\n",
-    "def password_check(num, max_two_adj=False):       \n",
+    "\n",
+    "def password_check(num, exact_two_adj=False):       \n",
     "    digits = [int(i) for i in str(num)]\n",
     "    prev = digits[0]\n",
     "\n",
@@ -57,17 +58,15 @@
     "        \n",
     "    counted = Counter(digits)\n",
     "    \n",
-    "    if max_two_adj and (2 in counted.values()):\n",
-    "        return True\n",
-    "    if not max_two_adj and any(x > 1 for x in counted.values()):\n",
-    "        return True\n",
-    "    \n",
-    "    return False"
+    "    if exact_two_adj:\n",
+    "        return any(x == 2 for x in counted.values())\n",
+    "    if not exact_two_adj:\n",
+    "        return any(x > 1 for x in counted.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +78,14 @@
     }
    ],
    "source": [
-    "def run_tests(tests=tests, max_two_adj=False):\n",
+    "def run_tests(tests=tests, exact_two_adj=False):\n",
     "    \"\"\"tests is a dictionary {input_int: bool}\n",
-    "    max_two_adj is passed through to the other functions, used in Part Two\"\"\"\n",
+    "    exact_two_adj is passed through to the other functions\n",
+    "    \"\"\"\n",
     "    for x in tests:\n",
-    "        pred = password_check(x, max_two_adj)\n",
-    "        assert pred == tests[x], f\"{x} failed, checker said {pred} but it was {tests[x]}.\"\n",
+    "        pred = password_check(x, exact_two_adj)\n",
+    "        assert pred == tests[x], \\\n",
+    "            f\"{x} failed, checker said {pred} but it was {tests[x]}.\"\n",
     "    print('All tests passed.')\n",
     "    \n",
     "    \n",
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -102,16 +103,16 @@
        "1686"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def password_counter(start, stop, tally=0, max_two_adj=False):\n",
+    "def password_counter(start, stop, tally=0, exact_two_adj=False):\n",
     "    \"\"\"Count the number of valid passwords between [start, stop]\"\"\"\n",
     "    for num in range(start, stop + 1):\n",
-    "        if password_check(num, max_two_adj):\n",
+    "        if password_check(num, exact_two_adj):\n",
     "            tally += 1\n",
     "            \n",
     "    return tally\n",
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -149,20 +150,20 @@
    ],
    "source": [
     "tests2 = {\n",
+    "    994321: False,\n",
     "    112233: True,\n",
     "    123444: False,\n",
     "    111122: True, \n",
     "    188899: True,\n",
-    "    222255: True,\n",
     "    225555: True\n",
     "}\n",
     "\n",
-    "run_tests(tests2, max_two_adj=True)"
+    "run_tests(tests2, exact_two_adj=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,13 +172,13 @@
        "1145"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "password_counter(start, stop, max_two_adj=True)   # 952 is wrong: too low"
+    "password_counter(start, stop, exact_two_adj=True)  # 1145"
    ]
   }
  ],
