insert 0 in front of single digit numerals of file names

--- a/notebooks/01.ipynb
+++ b/notebooks/01.ipynb
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "with open('../data/1a.txt', 'rb') as f:\n",
+    "with open('../data/01a.txt', 'rb') as f:\n",
     "    masses = [int(line) for line in f]\n",
     "\n",
     "fuels = [x // 3 - 2 for x in masses]\n",
@@ -94,7 +94,7 @@
     "\n",
     "    return df.sum()[1:].sum()\n",
     "\n",
-    "cum_sum_fuel(masses)"
+    "cum_sum_fuel(masses)  # 4892135"
    ]
   },
   {
