--- a/notebooks/02.ipynb
+++ b/notebooks/02.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "with open('../data/2a.txt', 'r') as f:\n",
+    "with open('../data/02a.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        raw_intcode = [int(x) for x in line.split(',')]\n",
     "\n",
@@ -137,7 +137,7 @@
     "    return intcode[0]\n",
     "\n",
     "\n",
-    "process_intcode(intcode)"
+    "process_intcode(intcode)  # 2692315"
    ]
   },
   {
@@ -187,7 +187,9 @@
     "        if process_intcode(intcode) == target:\n",
     "            print(f'Match found using inputs: {i}, {j}')\n",
     "            print(f'Final Answer is: {100*i + j}')\n",
-    "            break"
+    "            break\n",
+    "            \n",
+    "#  (95, 7) --> 9507"
    ]
   },
   {
