--- a/notebooks/03.ipynb
+++ b/notebooks/03.ipynb
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "wire_paths = []\n",
     "\n",
-    "with open('../data/3a.txt', 'r') as f:\n",
+    "with open('../data/03a.txt', 'r') as f:\n",
     "    for line in f:\n",
     "        wire_paths.append(line.strip().split(','))\n",
     "\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "248"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
     "    assert manhat_min == ans, f'part A got {manhat_min}, should have been {ans}'\n",
     "\n",
     "\n",
-    "manhattan_min(shared_seen(a_paths, b_paths))"
+    "manhattan_min(shared_seen(a_paths, b_paths))  # 248"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
     "a, b = all_seen(a_paths), all_seen(b_paths)\n",
     "\n",
     "fewest_steps = min([a[point] + b[point] for point in shared_seen()])  \n",
-    "print(f'The fewest combined steps to get to a wire crossing is {fewest_steps}.')"
+    "print(f'The fewest combined steps to get to a wire crossing is {fewest_steps}.')  # 28580"
    ]
   },
   {
