much refactoring of file structure and intcode computer in advent.py

--- a/notebooks/02.ipynb
+++ b/notebooks/02.ipynb
@@ -127,7 +127,7 @@
     "\n",
     "\n",
     "def process_intcode(intcode, jump=4):\n",
-    "    \"\"\"iterate through intcode, applying single_code() to each block of width=jump\n",
+    "    \"\"\"Iterate through intcode, applying single_code() to each block of width=jump\n",
     "    Immediately stop if we see code '99' as the first number in a block\n",
     "    \"\"\"\n",
     "    for i in range(0, len(intcode), jump):\n",
@@ -190,6 +190,45 @@
     "            break\n",
     "            \n",
     "#  (95, 7) --> 9507"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-fee4ed4a8086>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0madvent\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "from .. import advent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/dakaspar/random_code/advent2019/notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cd \n",
+    "!pwd"
    ]
   },
   {
