--- a/notebooks/06.ipynb
+++ b/notebooks/06.ipynb
@@ -78,7 +78,7 @@
     "    like so:  {'B':'A'}\n",
     "    \"\"\"\n",
     "    lines = [x.split(')') for x in orbits.split('\\n') if x]\n",
-    "    return {x[1]: x[0] for x in lines}\n",
+    "    return {x[1]: x[0] for x in lines}   # Note the order reversal\n",
     "\n",
     "test_orbits = parse_orbits(test1)\n",
     "test_orbits"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "292"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,6 +207,13 @@
     "santa = orbit_path('SAN')\n",
     "orbital_jumps(you, santa)  # 292"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
