partial solution for 8b

--- a/notebooks/08.ipynb
+++ b/notebooks/08.ipynb
@@ -125,6 +125,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 2, 2, ..., 2, 1, 2],\n",
+       "       [2, 0, 2, ..., 2, 2, 2],\n",
+       "       [0, 0, 2, ..., 2, 2, 1],\n",
+       "       ...,\n",
+       "       [2, 2, 2, ..., 1, 1, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 1],\n",
+       "       [1, 2, 1, ..., 0, 1, 1]])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shaped_layered = layered_pixels.reshape(1,-1,len(layered_pixels))[0]\n",
+    "shaped_layered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 2, 2, 2],\n",
+       "       [1, 1, 2, 2],\n",
+       "       [2, 2, 1, 2],\n",
+       "       [0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test2 = str_to_array('0222112222120000', 2, 2)\n",
+    "\n",
+    "shaped = test2.reshape(1,-1,4)[0]\n",
+    "shaped"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, 0])"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "#print('output', output)\n",
+    "\n",
+    "\n",
+    "def combine_layers(shaped):\n",
+    "    output = np.array([2 for _ in range(len(shaped))])\n",
+    "    \n",
+    "    for layer in shaped[::-1]:\n",
+    "        new_output = []\n",
+    "        \n",
+    "        for new, old in zip(layer, output[:]):\n",
+    "            if new != 2:\n",
+    "                new_output.append(new)\n",
+    "            else: \n",
+    "                new_output.append(old)\n",
+    "\n",
+    "        output = np.array(new_output)\n",
+    "    return output\n",
+    "    \n",
+    "            \n",
+    "combine_layers(shaped)      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 100 into shape (25,6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-143-980d8915a9a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcombined\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcombine_layers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshaped_layered\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcombined\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 100 into shape (25,6)"
+     ]
+    }
+   ],
+   "source": [
+    "combined = combine_layers(shaped_layered)\n",
+    "combined.reshape(width, height)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
